# handwriting-fastapi

./: .dockerignore  .gitignore  API_README.md  Dockerfile  app.py  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rnn_cell.py  rnn_ops.py  test_api.py  tf_base_model.py
