[project]
name = "handwriting-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.104.0",
    "matplotlib>=2.1.0",
    "pandas>=0.22.0",
    "pydantic>=2.0.0",
    "scikit-learn>=0.19.1",
    "scipy>=1.0.0",
    "svgwrite>=1.1.12",
    "tensorflow>=2.10.0",
    "tensorflow-probability>=0.18.0",
    "tf-keras>=2.20.1",
    "uvicorn[standard]>=0.24.0",
]
